Fix overlaps issue.

--- a/decks/static/decks_style.css
+++ b/decks/static/decks_style.css
@@ -104,6 +104,7 @@
     margin: 10px;
     display: flex;
     flex-direction: row;
+    word-break: break-all;
 }
 
 #existing-decks {
